commit on 'Master'

--- a/index.html
+++ b/index.html
@@ -95,10 +95,7 @@
                         <div class="card-content">
                           <div class="content">
                            <p>
-                            Nascido em 1995 e residente na cidade de Goiânia - GO, ingressei pela primeira vez na Universidade Estadual de
-                            Goiás - Faculdade de Engenharia Agrícola em 2013. Também cursei através do Instituto
-                            Federal de Goiás a Engenharia de Controle e Automação da qual ainda sou aluno, além do curso de
-                            Análise e Desenvolvimento de Sistemas - SENAC.
+                            Nascido e residente na cidade de Goiânia - GO, ingressei pela primeira vez na Universidade Estadual de Goiás - Faculdade de Engenharia Agrícola aos 16 anos em 2013. Também cursei através do Instituto Federal de Goiás a Engenharia de Controle e Automação da qual ainda sou aluno, além do curso de Sistemas de Informação também no IFG, e Análise e Desenvolvimento de Sistemas - SENAC.
                             <br>
                             <br>
                             Atualmente, sou <strong>Desenvolvedor Fullstack JavaScript Jr.</strong> (Domínio de HTML, CSS, JavaScript, NodeJs, e
