commit on 'Master'

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                                     <hr>
                                     <p>gustavohmeireles@gmail.com</p>
                                     <hr>
-                                    <p>Software developer <a>@JavaScript </a> | <a>@RubyonRails </a>
-                                        <a href="#">#html</a>
-                                        <a href="#">#css</a>
-                                        <a href="#">#responsive</a>
-                                        <a href="#">#bulma</a>
+                                    <p>Software developer <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank">@JavaScript </a> | <a href="https://rubyonrails.org/" target="_blank">@RubyonRails </a>
+                                        <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML">#html</a>
+                                        <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS">#css</a>
+                                        <a href="https://developer.mozilla.org/pt-BR/docs/Learn/CSS/CSS_layout/Responsive_Design">#responsive</a>
+                                        <a href="https://bulma.io/">#bulma</a>
                                     </p>   
                                 </div>
                             </div>
@@ -174,11 +174,16 @@ Grau de formação: Graduação
 Nome do curso: Engenharia de Controle e Automação
 
 <strong>Graduação #2</strong>
+Instituição: Instituto Federal de Goiás
+Grau de formação: Graduação
+Nome do curso: Sistemas de Informação
+
+<strong>Graduação #3</strong>
 Instituição: Senac
 Grau de formação: Graduação
 Nome do curso: Análise e Desenvolvimento de Sistemas
 
-<strong>Graduação #3</strong>
+<strong>Graduação #4</strong>
 Instituição: Colégio Absoluto
 Grau de formação:Ensino Médio
                                </pre>
