commit on 'Master'

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
                                 <div class="content">
                                     <p>+55 62 9 9966-4739</p>
                                     <hr>
+                                    <a href="docs/cv.pdf" target="_blank">
+                                      <button class="button is-link is-small">Download Currículo             
+                                      </button>
+                                    </a>
+                                    <hr>
                                     <p>gustavohmeireles@gmail.com</p>
                                     <hr>
                                     <p>Software developer <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank">@JavaScript </a> | <a href="https://rubyonrails.org/" target="_blank">@RubyonRails </a>
