commit on 'Master'

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar is-light" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
               <a class="navbar-item" href="index.html">
-                <img src="image/diamond-outline.svg" alt="eagle at attack" width="112" height="28">
+                <img src="assets/image/diamond-outline.svg" alt="eagle at attack" width="112" height="28">
               </a>
           
               <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
@@ -57,7 +57,7 @@
                     <div class="card">
                         <div class="card-image">
                           <figure class="image is-4by3">
-                            <img src="image/profile_baw.jpeg" alt="profile image black and white">
+                            <img src="assets/image/profile_baw.jpeg" alt="profile image black and white">
                           </figure>
                         </div>
                         <div class="card-content">
@@ -71,7 +71,7 @@
                                 <div class="content">
                                     <p>+55 62 9 9966-4739</p>
                                     <hr>
-                                    <a href="docs/cv.pdf" target="_blank">
+                                    <a href="assets/docs/cv.pdf" target="_blank">
                                       <button class="button is-link is-small">Download Currículo             
                                       </button>
                                     </a>
