--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
         <nav class="navbar is-light" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
               <a class="navbar-item" href="index.html">
-                <img src="diamond-outline.svg" alt="eagle at attack" width="112" height="28">
+                <img src="assets/image/diamond-outline.svg" alt="eagle at attack" width="112" height="28">
               </a>
           
               <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
@@ -59,7 +59,7 @@
                     <div class="card">
                         <div class="card-image">
                           <figure class="image is-4by3">
-                            <img src="profile_baw.jpeg" alt="profile image black and white">
+                            <img src="assets/image/profile_baw.jpeg" alt="profile image black and white">
                           </figure>
                         </div>
                         <div class="card-content">
