commit on 'Master'

--- a/contact.html
+++ b/contact.html
@@ -51,40 +51,51 @@
           </nav>
     </header>
     <section class="section">
-        <div class="container">
-            <div class="columns">
-                <div class="column">
-                    <div class="card">
-                        <div class="card-image">
-                          <figure class="image is-4by3">
-                            <img src="assets/image/profile_baw.jpeg" alt="profile image black and white">
-                          </figure>
-                        </div>
-                        <div class="card-content">
-                          <div class="media">
-                            <div class="media-content">
-                              <p class="title is-4">Gustavo Henrique E. M. Meireles</p>
-                              <p class="subtitle is-6">@gustavommeireles</p>
-                                <span class="tag is-dark is-small">JavaScript Fullstack Developer Jr.</span>
-                                <span class="tag is-dark is-small">Ruby on Rails Developer Jr.</span>
-                                <hr>
-                                <div class="content">
-                                    <p>+55 62 9 9966-4739</p>
-                                    <hr>
-                                    <p>gustavohmeireles@gmail.com</p>
-                                    <hr>
-                                    <p>Software developer <a>@JavaScript </a> | <a>@RubyonRails </a>
-                                        <a href="#">#html</a>
-                                        <a href="#">#css</a>
-                                        <a href="#">#responsive</a>
-                                        <a href="#">#bulma</a>
-                                    </p>   
-                                </div>
-                            </div>
-                          </div>                  
-                        </div>
+      <div class="container">
+          <div class="columns">
+              <div class="column">
+                  <div class="card">
+                      <div class="card-image">
+                        <figure class="image is-4by3">
+                          <img src="assets/image/profile_baw.jpeg" alt="profile image black and white">
+                        </figure>
+                      </div>
+                      <div class="card-content">
+                        <div class="media">
+                          <div class="media-content">
+                            <p class="title is-4">Gustavo Henrique E. M. Meireles</p>
+                            <p class="subtitle is-6">@gustavommeireles</p>
+                              <span class="tag is-dark is-small">JavaScript Fullstack Developer Jr.</span>
+                              <span class="tag is-dark is-small">Ruby on Rails Developer Jr.</span>
+                              <hr>
+                              <div class="content">
+                                  <p>+55 62 9 9966-4739 (tel/wpp)</p>
+                                  <hr>
+                                  <a href="https://www.youtube.com/watch?v=C5XG2IwZ-0E" target="_blank">
+                                    <button class="button is-dark is-small">Vídeo Apresentação Pessoal             
+                                    </button>
+                                  </a>
+                                  <br>
+                                  <br>
+                                  <a href="assets/docs/cv.pdf" target="_blank">
+                                    <button class="button is-dark is-small">Download Currículo             
+                                    </button>
+                                  </a>
+                                  <hr>
+                                  <p>gustavohmeireles@gmail.com</p>
+                                  <hr>
+                                  <p>Software developer <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank">@JavaScript </a> | <a href="https://rubyonrails.org/" target="_blank">@RubyonRails </a>
+                                      <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML">#html</a>
+                                      <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS">#css</a>
+                                      <a href="https://developer.mozilla.org/pt-BR/docs/Learn/CSS/CSS_layout/Responsive_Design">#responsive</a>
+                                      <a href="https://bulma.io/">#bulma</a>
+                                  </p>   
+                              </div>
+                          </div>
+                        </div>                  
+                      </div>
                     </div>
-                </div>
+              </div>
                 <div class="column is-9">
                   <div class="field is-horizontal">
                     <div class="field-label is-normal">
