--- a/index.html
+++ b/index.html
@@ -69,10 +69,16 @@
                                 <span class="tag is-dark is-small">Ruby on Rails Developer Jr.</span>
                                 <hr>
                                 <div class="content">
-                                    <p>+55 62 9 9966-4739</p>
+                                    <p>+55 62 9 9966-4739 (tel/wpp)</p>
                                     <hr>
+                                    <a href="https://www.youtube.com/watch?v=C5XG2IwZ-0E" target="_blank">
+                                      <button class="button is-dark is-small">Vídeo Apresentação Pessoal             
+                                      </button>
+                                    </a>
+                                    <br>
+                                    <br>
                                     <a href="assets/docs/cv.pdf" target="_blank">
-                                      <button class="button is-link is-small">Download Currículo             
+                                      <button class="button is-dark is-small">Download Currículo             
                                       </button>
                                     </a>
                                     <hr>
